--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tilegame",
   "version": "0.0.1",
   "dependencies": {
+    "consolidate": "0.5.0",
     "mongodb": "1.2.6",
     "mootools": "1.4.5",
     "socket.io": "0.9.13",
