--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
     "target": "es6",
     "module": "ES6",
     "sourceMap": true,
-    "skipLibCheck": true, // for interactjs
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "interactjs/interact": ["node_modules/interactjs/dist/interact.min.js"]
     },
-    "moduleResolution": "nodenext",
-    "outDir": "dist/build/"
+    "moduleResolution": "nodenext"
   }
 }
