--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "paths": {
       "interactjs/interact": ["node_modules/interactjs/dist/interact.min.js"]
     },
-    "moduleResolution": "nodenext",
-    "outDir": "dist/"
+    "moduleResolution": "nodenext"
   }
 }
