--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "interactjs": "^1.10.17",
+    "offset-polygon": "^0.9.2",
     "rollup": "^3.23.0"
   },
   "devDependencies": {
