--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-workbox": "^8.0.1",
     "tslib": "^2.5.0"
   },
   "type": "module"
