--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "dependencies": {
-    "interactjs": "^1.10.17",
-    "offset-polygon": "^0.9.2",
-    "rollup": "^3.23.0"
+  "scripts": {
+    "build": "webpack"
   },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-strip": "^3.0.2",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-workbox": "^8.0.1",
-    "tslib": "^2.5.0"
+  "dependencies": {
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.20.0",
+    "html-bundler-webpack-plugin": "^4.18.0",
+    "interactjs": "^1.10.27",
+    "terser-webpack-plugin": "^5.3.11",
+    "ts-loader": "^9.5.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "type": "module"
 }
