--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,19 @@
 {
+  // "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
-    "sourceMap": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "interactjs/interact": ["node_modules/interactjs/dist/interact.min.js"]
-    },
-    "moduleResolution": "nodenext",
+    "target": "es6",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    // "verbatimModuleSyntax": true,
     "outDir": "build/",
+    "sourceMap": true,
+    "lib": ["es2022", "dom", "dom.iterable"],
+    "baseUrl": ".",
   }
 }
