--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-prettier": "^10.0.1",
     "html-bundler-webpack-plugin": "^4.18.0",
     "interactjs": "^1.10.27",
+    "prettier": "^3.5.0",
     "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
