--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest",
+    "check": "tsc --noEmit"
   },
   "dependencies": {
     "css-loader": "^7.1.2",
@@ -13,11 +15,15 @@
     "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "workbox-webpack-plugin": "^7.3.0"
+    "workbox-webpack-plugin": "^7.3.0",
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "parcel": "^2.13.3",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   },
   "type": "module"
 }
