--- a/package.json
+++ b/package.json
@@ -5,25 +5,28 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
+    "@swc/jest": "^0.2.37",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "detect-collisions": "^9.24.0",
     "eslint": "^9.20.0",
     "eslint-config-prettier": "^10.0.1",
     "html-bundler-webpack-plugin": "^4.18.0",
     "interactjs": "^1.10.27",
+    "jest": "^29.7.0",
+    "parcel": "^2.13.3",
     "prettier": "^3.5.0",
+    "rbush": "^4.0.1",
     "terser-webpack-plugin": "^5.3.11",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "workbox-webpack-plugin": "^7.3.0",
-    "@jest/globals": "^29.7.0",
-    "jest": "^29.7.0",
-    "parcel": "^2.13.3",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3"
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "type": "module"
 }
