--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "interactjs": "^1.10.27",
     "jest": "^29.7.0",
     "parcel": "^2.13.3",
+    "polygon-clipping": "^0.15.7",
     "prettier": "^3.5.0",
     "rbush": "^4.0.1",
     "terser-webpack-plugin": "^5.3.11",
@@ -28,5 +29,11 @@
     "webpack-cli": "^6.0.1",
     "workbox-webpack-plugin": "^7.3.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@parcel/packager-raw-url": "^2.13.3",
+    "@parcel/reporter-bundle-analyzer": "^2.13.3",
+    "@parcel/transformer-webmanifest": "^2.13.3",
+    "process": "^0.11.10"
+  }
 }
