--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "parcel build index.html",
+    "build": "NODE_ENV=production parcel build index.html",
+    "serve": "NODE_ENV=development parcel serve index.html --no-cache",
     "test": "jest",
     "check": "tsc --noEmit"
   },
