--- a/package.json
+++ b/package.json
@@ -17,27 +17,22 @@
     "@swc/jest": "^0.2.37",
     "babel-plugin-transform-define": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
     "detect-collisions": "^9.24.0",
     "eslint": "^9.20.0",
     "eslint-config-prettier": "^10.0.1",
-    "html-bundler-webpack-plugin": "^4.18.0",
     "interactjs": "^1.10.27",
     "jest": "^29.7.0",
     "parcel": "^2.13.3",
     "polygon-clipping": "^0.15.7",
     "prettier": "^3.5.0",
     "rbush": "^4.0.1",
-    "terser-webpack-plugin": "^5.3.11",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "workbox-webpack-plugin": "^7.3.0"
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0"
   },
   "type": "module",
   "devDependencies": {
