Sort development dependencies.

--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "@interactjs/auto-start": "^1.10.27",
     "@interactjs/interact": "^1.10.27",
     "@interactjs/pointer-events": "^1.10.27",
-    "@jest/globals": "^29.7.0",
     "@parcel/service-worker": "^2.13.3",
-    "@swc/jest": "^0.2.37",
-    "babel-plugin-transform-define": "^2.1.4",
-    "babel-plugin-transform-remove-console": "^6.9.4",
     "detect-collisions": "^9.25.1",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
     "interactjs": "^1.10.27",
-    "jest": "^29.7.0",
-    "parcel": "^2.13.3",
     "polygon-clipping": "^0.15.7",
-    "prettier": "^3.5.3",
     "rbush": "^4.0.1",
-    "ts-jest": "^29.2.6",
-    "ts-loader": "^9.5.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0"
   },
   "type": "module",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@parcel/packager-raw-url": "^2.13.3",
     "@parcel/reporter-bundle-analyzer": "^2.13.3",
     "@parcel/transformer-webmanifest": "^2.13.3",
-    "process": "^0.11.10"
+    "@swc/jest": "^0.2.37",
+    "babel-plugin-transform-define": "^2.1.4",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "jest": "^29.7.0",
+    "parcel": "^2.13.3",
+    "prettier": "^3.5.3",
+    "process": "^0.11.10",
+    "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   }
 }
