--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,13 @@
 root = true
 
+[*]
+charset = utf-8
+insert_final_newline = true
+end_of_line = lf
+indent_style = space
+indent_size = 2
+max_line_length = 80
+
 [*.ts]
 indent_style = space
 indent_size = 4
