--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "parcel": "^2.13.3",
     "prettier": "^3.5.3",
     "process": "^0.11.10",
+    "pwa-asset-generator": "^6.4.0",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
