--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "tilegame",
   "scripts": {
     "build": "NODE_ENV=production parcel build index.html --no-source-maps",
     "serve": "NODE_ENV=development parcel serve index.html --no-cache",
@@ -18,7 +19,8 @@
     "polygon-clipping": "^0.15.7",
     "rbush": "^4.0.1",
     "workbox-core": "^7.3.0",
-    "workbox-precaching": "^7.3.0"
+    "workbox-precaching": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "type": "module",
   "devDependencies": {
