--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@interactjs/auto-start": "^1.10.27",
     "@interactjs/interact": "^1.10.27",
     "@interactjs/pointer-events": "^1.10.27",
-    "@parcel/service-worker": "^2.13.3",
+    "@parcel/service-worker": "^2.14.0",
     "detect-collisions": "^9.25.1",
     "interactjs": "^1.10.27",
     "polygon-clipping": "^0.15.7",
@@ -25,10 +25,10 @@
   "type": "module",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@parcel/packager-raw-url": "^2.13.3",
-    "@parcel/reporter-bundle-analyzer": "^2.13.3",
-    "@parcel/transformer-sass": "^2.13.3",
-    "@parcel/transformer-webmanifest": "^2.13.3",
+    "@parcel/packager-raw-url": "^2.14.0",
+    "@parcel/reporter-bundle-analyzer": "^2.14.0",
+    "@parcel/transformer-sass": "^2.14.0",
+    "@parcel/transformer-webmanifest": "^2.14.0",
     "@swc/jest": "^0.2.37",
     "babel-plugin-transform-define": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -36,9 +36,10 @@
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "jest": "^29.7.0",
-    "parcel": "^2.13.3",
+    "parcel": "^2.14.0",
     "prettier": "^3.5.3",
     "process": "^0.11.10",
+    "svgo": "^3.3.2",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
