--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-prettier": "^10.1.1",
     "jest": "^29.7.0",
     "parcel": "^2.14.0",
+    "parcel-namer-rewrite": "^2.10.3-rc.2",
     "prettier": "^3.5.3",
     "process": "^0.11.10",
     "svgo": "^3.3.2",
@@ -45,5 +46,13 @@
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
+  },
+  "parcel-namer-rewrite": {
+    "hashing": "always",
+    "disable": false,
+    "rules": {
+      "^([^s].*).js": "game.{hash}.js",
+      "^(.*).css": "game.{hash}.css"
+    }
   }
 }
