--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.14.0",
     "parcel-namer-rewrite": "^2.10.3-rc.2",
     "prettier": "^3.5.3",
