--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
     }
   ],
   "display": "standalone",
+  "orientation": "natural",
   "theme_color": "#000000",
   "background_color": "#000000"
 }
