--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,28 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/icons/icon-180.png",
       "type": "image/png",
-      "sizes": "180x180 any",
-      "purpose": "maskable any"
+      "sizes": "180x180",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "display": "standalone",
