--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "serve": "NODE_ENV=development parcel serve index.html --no-cache",
     "test": "jest",
     "check": "tsc --noEmit",
-    "update-icon": "rsvg-convert icon.svg -w 180 -h 180 -o icon.png ; for s in 180 192 512 ; do rsvg-convert icon.svg -w $s -h $s -o icons/icon-$s.png ; done"
+    "update-icon": "rsvg-convert icon.svg -w 180 -h 180 -o icon.png ; for s in 180 192 512 ; do rsvg-convert icon.svg -w $s -h $s -o icons/icon-$s.png ; done",
+    "screenshots": "tsx scripts/make-screenshots.ts"
   },
   "browserslist": "defaults",
   "dependencies": {
@@ -47,6 +48,7 @@
     "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
   },
