--- a/.parcelrc
+++ b/.parcelrc
@@ -1,4 +1,5 @@
 {
   "extends": "@parcel/config-default",
-  "namers": [ "parcel-namer-rewrite" ]
+  "namers": [ "parcel-namer-rewrite" ],
+  "optimizers": { "*.html": [] }
 }
