--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,8 +15,23 @@ jobs:
           cache: npm
       - name: Install Node dependencies
         run: npm ci
-      - name: Build with webpack
+      - name: Build with parcel
         run: npm run build
+
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: npm
+      - name: Install Node dependencies
+        run: npm ci
+      - name: Run jest
+        run: npm run test
 
   prettier:
     name: prettier
