--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tilegame",
+  "name": "tessel",
   "scripts": {
     "build": "NODE_ENV=production parcel build index.html --no-source-maps",
     "serve": "NODE_ENV=development parcel serve index.html --no-cache",
