--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "parcel": "^2.15.4",
     "parcel-namer-rewrite": "^2.10.3-rc.5",
+    "parcel-reporter-static-files-copy": "^1.5.3",
     "prettier": "^3.6.2",
     "process": "^0.11.10",
     "svgo": "^4.0.0",
@@ -59,5 +60,15 @@
       "^([^s].*).js": "game.{hash}.js",
       "^(.*).css": "game.{hash}.css"
     }
-  }
+  },
+  "staticFiles": [
+    {
+      "staticPath": "social/tessel-1200x1200.png",
+      "distDir": "dist/social"
+    },
+    {
+      "staticPath": "social/tessel-1200x630.png",
+      "distDir": "dist/social"
+    }
+  ]
 }
