--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "NODE_ENV=development parcel serve index.html --no-cache",
     "test": "jest",
     "check": "tsc --noEmit",
-    "update-icon": "rsvg-convert icons/icon.svg -w 180 -h 180 -o icons/icon.png ; for s in 180 192 512 ; do rsvg-convert icons/icon.svg -w $s -h $s -o icons/icon-$s.png ; done",
+    "update-icon": "rsvg-convert assets/icons/icon.svg -w 180 -h 180 -o assets/icons/icon.png ; for s in 180 192 512 ; do rsvg-convert assets/icons/icon.svg -w $s -h $s -o assets/icons/icon-$s.png ; done",
     "screenshots": "tsx scripts/make-screenshots.ts"
   },
   "browserslist": "defaults",
@@ -63,11 +63,11 @@
   },
   "staticFiles": [
     {
-      "staticPath": "social/tessel-1200x1200.png",
+      "staticPath": "assets/social/tessel-1200x1200.png",
       "distDir": "dist/social"
     },
     {
-      "staticPath": "social/tessel-1200x630.png",
+      "staticPath": "assets/social/tessel-1200x630.png",
       "distDir": "dist/social"
     }
   ]
