--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "type": "module",
   "devDependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@jest/globals": "^30.2.0",
     "@parcel/packager-raw-url": "^2.15.4",
     "@parcel/reporter-bundle-analyzer": "^2.15.4",
