--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production parcel build index.html --no-source-maps",
+    "build-cap": "NODE_ENV=production SKIP_SERVICE_WORKER=true parcel build index.capacitor.html --dist-dir dist-capacitor --no-source-maps",
     "serve": "NODE_ENV=development parcel serve index.html --no-cache",
     "test": "jest",
     "check": "tsc --noEmit",
@@ -15,6 +16,7 @@
     "screenshots": "tsx scripts/make-screenshots.ts"
   },
   "browserslist": "defaults",
+  "type": "module",
   "dependencies": {
     "@parcel/service-worker": "^2.15.4",
     "check2d": "^9.30.1",
@@ -23,11 +25,11 @@
     "workbox-precaching": "^7.3.0",
     "workbox-window": "^7.3.0"
   },
-  "type": "module",
   "devDependencies": {
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@capacitor/status-bar": "^7.0.3",
     "@jest/globals": "^30.2.0",
     "@parcel/packager-raw-url": "^2.15.4",
     "@parcel/reporter-bundle-analyzer": "^2.15.4",
@@ -61,7 +63,8 @@
     "disable": false,
     "rules": {
       "^([^s].*).js": "game.{hash}.js",
-      "^(.*).css": "game.{hash}.css"
+      "^(.*).css": "game.{hash}.css",
+      "^index.capacitor.html": "index.html"
     }
   },
   "staticFiles": [
