--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "color": "^5.0.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-license-header": "^0.8.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
