Rename npm run build-cap to build-cap-html.

--- a/.github/workflows/build-android.yaml
+++ b/.github/workflows/build-android.yaml
@@ -39,7 +39,7 @@ jobs:
           echo ${{ secrets.ANDROID_KEYSTORE }} | base64 --decode > ~/.keystore/keystore.jks
 
       - name: Build HTML assets for capacitor
-        run: npm run build-cap
+        run: npm run build-cap-html
 
       - name: Copy files to capacitor
         run: |
