--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production parcel build index.html --no-source-maps",
-    "build-cap": "NODE_ENV=production SKIP_SERVICE_WORKER=true parcel build index.capacitor.html --dist-dir dist-capacitor --no-source-maps",
+    "build-cap-html": "NODE_ENV=production SKIP_SERVICE_WORKER=true parcel build index.capacitor.html --dist-dir dist-capacitor --no-source-maps",
     "serve": "NODE_ENV=development parcel serve index.html --no-cache",
     "test": "jest",
     "check": "tsc --noEmit",
