--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,25 +7,25 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "assets/icons/icon-180.png",
+      "src": "../assets/icons/icon-180.png",
       "type": "image/png",
       "sizes": "180x180",
       "purpose": "any"
     },
     {
-      "src": "assets/icons/icon-192.png",
+      "src": "../assets/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "assets/icons/icon-512.png",
+      "src": "../assets/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "assets/icons/icon-512.png",
+      "src": "../assets/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -33,49 +33,49 @@
   ],
   "screenshots": [
     {
-      "src": "assets/screenshots/portrait-main-menu.png",
+      "src": "../assets/screenshots/portrait-main-menu.png",
       "sizes": "750x1334",
       "type": "image/png",
       "form_factor": "narrow"
     },
     {
-      "src": "assets/screenshots/portrait-square.png",
+      "src": "../assets/screenshots/portrait-square.png",
       "sizes": "750x1334",
       "type": "image/png",
       "form_factor": "narrow"
     },
     {
-      "src": "assets/screenshots/portrait-setup.png",
+      "src": "../assets/screenshots/portrait-setup.png",
       "sizes": "750x1334",
       "type": "image/png",
       "form_factor": "narrow"
     },
     {
-      "src": "assets/screenshots/portrait-paint-triangle.png",
+      "src": "../assets/screenshots/portrait-paint-triangle.png",
       "sizes": "750x1334",
       "type": "image/png",
       "form_factor": "narrow"
     },
     {
-      "src": "assets/screenshots/wide-main-menu.png",
+      "src": "../assets/screenshots/wide-main-menu.png",
       "sizes": "2048x1536",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "assets/screenshots/wide-square.png",
+      "src": "../assets/screenshots/wide-square.png",
       "sizes": "2048x1536",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "assets/screenshots/wide-setup.png",
+      "src": "../assets/screenshots/wide-setup.png",
       "sizes": "2048x1536",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "assets/screenshots/wide-paint-triangle.png",
+      "src": "../assets/screenshots/wide-paint-triangle.png",
       "sizes": "2048x1536",
       "type": "image/png",
       "form_factor": "wide"
