GitHub action: Fix artifact export path.

--- a/.github/workflows/build-apps.yaml
+++ b/.github/workflows/build-apps.yaml
@@ -207,6 +207,8 @@ jobs:
 
       - name: Download artifacts
         uses: actions/download-artifact@v5
+        with:
+          merge-multiple: true
 
       - name: Copy Changelog from metadata
         run: |
