--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "check": "tsc --noEmit",
     "update-icon": "rsvg-convert assets/icons/icon.svg -w 180 -h 180 -o assets/icons/icon.png ; for s in 180 192 512 1024 ; do rsvg-convert assets/icons/icon.svg -w $s -h $s -o assets/icons/icon-$s.png ; done",
     "update-cap-assets": "npx @capacitor/assets generate --iconBackgroundColor '#eeeeee' --iconBackgroundColorDark '#222222' --splashBackgroundColor '#eeeeee' --splashBackgroundColorDark '#111111' --android --assetPath assets/capacitor/",
-    "screenshots": "tsx scripts/make-screenshots.ts"
+    "screenshots": "tsx scripts/make-screenshots.ts",
+    "lingui-extract": "lingui extract",
+    "lingui-compile": "lingui compile --typescript"
   },
   "browserslist": "defaults",
   "type": "module",
   "dependencies": {
+    "@lingui/core": "^5.5.1",
     "@parcel/service-worker": "^2.15.4",
     "check2d": "^9.30.1",
     "polygon-clipping": "^0.15.7",
@@ -35,6 +38,8 @@
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/status-bar": "^7.0.3",
     "@jest/globals": "^30.2.0",
+    "@lingui/babel-plugin-lingui-macro": "^5.5.1",
+    "@lingui/cli": "^5.5.1",
     "@parcel/packager-raw-url": "^2.15.4",
     "@parcel/reporter-bundle-analyzer": "^2.15.4",
     "@parcel/transformer-inline-string": "^2.15.4",
@@ -47,6 +52,7 @@
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-license-header": "^0.8.0",
+    "eslint-plugin-lingui": "^0.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
