Fix tests for lingui i18n.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "lingui compile --typescript && NODE_ENV=production parcel build src/index.html --no-source-maps",
     "build-cap-html": "lingui compile --typescript && NODE_ENV=production SKIP_SERVICE_WORKER=true parcel build src/index.capacitor.html --dist-dir dist-capacitor --no-source-maps && rm -r dist-capacitor/social/",
     "serve": "NODE_ENV=development parcel serve src/index.html --no-cache",
-    "test": "jest",
+    "test": "lingui compile --typescript && jest",
     "check": "tsc --noEmit",
     "update-icon": "rsvg-convert assets/icons/icon.svg -w 180 -h 180 -o assets/icons/icon.png ; for s in 180 192 512 1024 ; do rsvg-convert assets/icons/icon.svg -w $s -h $s -o assets/icons/icon-$s.png ; done",
     "update-cap-assets": "npx @capacitor/assets generate --iconBackgroundColor '#eeeeee' --iconBackgroundColorDark '#222222' --splashBackgroundColor '#eeeeee' --splashBackgroundColorDark '#111111' --android --assetPath assets/capacitor/",
@@ -41,6 +41,7 @@
     "@jest/globals": "^30.2.0",
     "@lingui/babel-plugin-lingui-macro": "^5.5.1",
     "@lingui/cli": "^5.5.1",
+    "@lingui/swc-plugin": "^5.6.1",
     "@parcel/packager-raw-url": "^2.15.4",
     "@parcel/reporter-bundle-analyzer": "^2.15.4",
     "@parcel/transformer-inline-string": "^2.15.4",
